# family-archive-vault

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  SETUP_GUIDE.md  backup_db.py  cache_worker.py  caption_worker.py  check_db.py  clip_worker.py  cluster_faces.py  dashboard.py  dashboard_backup.py  dashboard_enhanced.py  dashboard_v11_video.py  dashboard_v12_api.py  dashboard_v12_video.py  dashboard_v2.py  dashboard_v3_final.py  dashboard_v4_final.py  dashboard_v5_fixed.py  dashboard_v6_semantic.py  dashboard_v7_final.py  dashboard_v8_final.py  docker-compose.yml  duplicate_detection.py  exif_worker.py  face_worker.py  fix_schema.py  generate_rosetta.bat  input.css  master_deployment_guide.md  optimize_db.py  phash_worker.py  pyproject.toml  requirements.txt  run_test.bat  (+20 more)
.claude/: settings.local.json
config/: drive_config.json  drive_folders.json
curator/: __init__.py  main.py
docs/: DRIVE_SETUP.md  INTAKE_DEPLOY_CLOUD_RUN.md  OPERATIONS_WINDOWS.md  PHASE_6_OVERVIEW.md  PHASE_6_STATUS.md
frontend/: package-lock.json  package.json
intake_webapp/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
logs/: dash_err.txt  dashboard_err.txt  dashboard_out.txt  dashboard_v8.err  db_check.txt  test_output.txt  upload_error.txt  upload_output.txt  worker_error.txt  worker_output.txt
memorial-netlify-function/: MEMORIAL_SITE_UPDATE.js  MEMORIAL_SITE_UPDATE_V2.js  README.md  package.json
rosetta/: __init__.py  main.py
scripts/: __init__.py  bootstrap.py  cluster_faces.py
services/: api_ops.py
(+76 files in other folders)
