[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-archive-vault"
version = "1.0.0"
description = "Family Archive Vault - AI-powered photo/video preservation system"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["archive", "photos", "ai", "face-recognition"]
authors = [
    {name = "Family Archive Team"}
]

[project.scripts]
fav-worker = "worker.main:main"
fav-intake = "intake_webapp.main:main"
fav-curator = "curator.main:main"
fav-rosetta = "rosetta.main:main"
fav-bootstrap = "scripts.bootstrap:main"
